// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of Todo 1`] = `
<DocumentFragment>
  <div>
    <button>
      x
    </button>
  </div>
</DocumentFragment>
`;

exports[`Snapshot of TodoList 1`] = `
<DocumentFragment>
  <div>
    <div>
      <form>
        <label
          for="todo"
        >
          todo:
        </label>
        <input
          id="todo"
          name="todo"
          placeholder="enter task"
          type="text"
          value=""
        />
        <button>
          submit
        </button>
      </form>
    </div>
    <ol />
  </div>
</DocumentFragment>
`;
